--- a/config/site.yml
+++ b/config/site.yml
@@ -1,18 +1,18 @@
 京东:
-  - 'http://search.jd.com/Search?keyword=<%= escaped_utf8_keyword %>&enc=utf-8'
-  - 'div.total span strong'
-  - 'div#pagin-btm span.page-skip em'
-  - '&page='
-  - '(1..2*pages_count-1).step(2)'
-  - '//li[@sku]'
-  - 'div#product-detail-1 ul.detail-list li'
-  - 'div#spec-n1'
+  search_page_url: 'http://search.jd.com/Search?keyword=<%= escaped_utf8_keyword %>&enc=utf-8'
+  product_amount_css: 'div.total span strong'
+  pages_count_css: 'div#pagin-btm span.page-skip em'
+  page_url: '&page='
+  page_array: '(1..2*pages_count-1).step(2)'
+  product_container_xpath: '//li[@sku]'
+  product_detail_css: 'div#product-detail-1 ul.detail-list li'
+  image_page_css: 'div#spec-n1'
 天猫:
-  - 'http://list.tmall.com/search_product.htm?q=<%= escaped_gbk_keyword %>'
-  - 'div#J_crumbs span'
-  - 'div#content div.main b.ui-page-skip form'
-  - '&jumpto='
-  - '1..pages_count'
-  - '//div[@data-id]'
-  - 'ul#J_AttrUL li'
-  - 'div.tb-booth a'
+  search_page_url: 'http://list.tmall.com/search_product.htm?q=<%= escaped_gbk_keyword %>'
+  product_amount_css: 'div#J_crumbs span'
+  pages_count_css: 'div#content div.main b.ui-page-skip form'
+  page_url: '&jumpto='
+  page_array: '1..pages_count'
+  product_container_xpath: '//div[@data-id]'
+  product_detail_css: 'ul#J_AttrUL li'
+  image_page_css: 'div.tb-booth a'
